# Happy-CGCD

./: config.py  pyproject.toml  train_happy.py
data/: cifar.py  corrupt_data.py  cub.py  data_utils.py  fgvc_aircraft.py  get_datasets.py  get_datasets_original.py  imagenet.py  stanford_cars.py  tiny_imagenet.py
data/augmentations/: __init__.py  cut_out.py  randaugment.py
models/: ema.py  lora.py  lora_vision_transformer.py  svft.py  svft_vision_transformer.py  utils_gcd.py  utils_proto_aug.py  utils_simgcd.py  utils_simgcd_pro.py  vision_transformer.py
project_utils/: cluster_and_log_utils.py  cluster_utils.py  general_utils.py
test/: test_lora.py  test_svft.py
