[project]
name = "Happy-CGCD"
version = "1.1.0"
description = "Unofficial work-in-progress fork of Happy: A Debiased Learning Framework for Continual Generalized Category Discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "torch>=2.8.0,<2.9.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "torch-sparse",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name="torch-scatter"
url="https://data.pyg.org/whl/torch-2.8.0+cu126.html"
explicit=true

[[tool.uv.index]]
name="torch-sparse"
url="https://data.pyg.org/whl/torch-2.8.0+cu126.html"
explicit=true

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]